Documentation progress, testing to be done

--- a/Source/help/index.html
+++ b/Source/help/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RetroAchievements Browser Help</title>
+    <title>TAFE Invaders Help</title>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
@@ -15,11 +15,12 @@
 
 <body>
     <div id="page-wrapper">
-        <div id="header">
-            <h1>TAFE Invaders Help</h1>
-        </div>
+
         <div id="main">
             <div id="nav">
+                <div id="header">
+                    <h1>TAFE Invaders Help</h1>
+                </div>
                 <ul>
                     <li><a href="#controls">Controls</a></li>
                     <li><a href="#music">Music</a></li>
@@ -37,6 +38,9 @@
                 </ul>
             </div>
             <div id="content">
+
+                <img style="width: 90%;" src="./images/screenshot.png" />
+
 
                 <!-- Controls -->
                 <div id="controls" class="section">
@@ -81,6 +85,10 @@
                         <li>Score</li>
                         <li>Date</li>
                     </ul>
+                    <br>
+                    <h2 id="loadingsaving">Saving / Loading</h2>
+                    <p>The highscore data is automatically loaded when the application is launched, and the data is also
+                        automatically saved when the application closes.</p>
                 </div>
 
                 <!-- Author -->
